Changes since RTEMS-NFS 1.1:
 NFS:
 - unlink() didnt work. The underlying RTEMS filesystem code evaluates
   a '..' path on a non-directory node to find out the file's parent
   directory. Workaround to this semantically inelegant RTEMS feature
   was implemented.
  
Changes since RTEMS-NFS 1.0.beta3:
 NFS:
 - fixed possible string overrun in nfsMount
 - nfs_read_dir() must reset the 'eofreached' flag if it skipped
   dirents present in the xdr but not fitting into the user buffer.
 - nfsMountsShow() released the wrong lock!
 RPCIO:
 - cannot delete locked binary semaphore (authlock) -- must unlock
   first (authlock was never deleted and hence effectively leaked)
 - added ASSERT paranoia around mutex primitives
 - Relaxed paranoia check / ASSERTion failure:
   paranoia_free() is called more than once on an ext_buf - it must
   undo calls to paranoia_refcnt() - hence the 0 == --refcnt check
   is too strict.
 - Added a DEBUG flag to introduce random packet losses for testing
   retransmission.
 xdr_mbuf:
 - make sure we do a signed comparison

Changes since rtemsNFS-1.0.beta2:
 - moved 'tar' command to the 'config' area; use
   predefined 'make-tar' in individual Makefiles
 - use INSTALL_CHANGE for headers, not INSTALL_VARIANT (probably doesn't
   matter, though)
 - use LD not LD_FOR_TARGET (to get absolute path)
 - fixed assertion failure print format
 - print requestor id if send_event fails - had just experienced this :-(
 - hint about fprintf using FP registers is probably PPC specific
 - provided implementation for xdrmbuf_getlong_aligned(). i386-rtems
   seems to use it.